# antarcticite

./: .gitignore  Cargo.toml  GEMINI.md  README.md  config.example.toml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
extension/: background.js  content.js  manifest.json
specs/001-browser-profile-router/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-browser-profile-router/checklists/: requirements.md
specs/001-browser-profile-router/contracts/: native-messaging.md
src/: main.rs
src/cli/: mod.rs
src/core/: config.rs  logger.rs  mod.rs  router.rs
src/extension/: mod.rs  native_messaging.rs
src/os/: default_browser.rs  mod.rs  native_messaging.rs  notifications.rs  tray.rs
