[package]
name = "antarcticite"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros"] }
toml = "1.0.7"
tracing = "0.1.44"
tracing-appender = "0.2.4"
url = "2.5.8"
