[package]
name = "antarcticite"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
byteorder = "1.5.0"
clap = { version = "4.6.0", features = ["derive"] }
directories = "6.0.0"
notify-rust = "4.12.0"
once_cell = "1.21.4"
open = "5.3.3"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros"] }
toml = "1.0.7"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tray-icon = "0.21.3"
url = "2.5.8"
